--- a/src/action/index.html
+++ b/src/action/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this extension.</noscript>
-    <div id="root"></div>
+    <div id="action-root"></div>
   </body>
   <script src="./scripts.tsx"></script>
 </html>
